# napari-signal-classifier

./: LICENSE  README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: test_and_deploy.yml
examples/: synthetic_example.py  synthetic_example2.py
notebooks/: WIP_sub_signal_classification_step_by_step.ipynb  sub_signal_classification_step_by_step.ipynb  time_window_sparse_jaccard_index.ipynb
src/napari_signal_classifier/: __init__.py  _classification.py  _detection.py  _features.py  _sub_signals.py  _utilities.py  _widget.py  env.yml  napari.yaml  shared.py
src/napari_signal_classifier/_tests/: test_classification.py  test_detection.py  test_features.py  test_sample_data.py  test_sub_signals.py  test_utilities.py  test_widget.py  test_widgets.py
src/napari_signal_classifier/_ui/: napari_train_and_predict_signal_classfier.ui  napari_train_and_predict_sub_signal_classfier.ui
src/napari_signal_classifier/data/: signals.csv  signals_annotated.csv  synthetic_labels.tif
src/napari_signal_classifier/notebooks/: loading_tracking_features.py  loading_tracking_features_unique_labels.ipynb  signal_classification_step_by_step.ipynb  table_with_annotations.csv
